# evenly-backend-service

./: .gitignore  CHANGELOG.md  DATABASE.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  VOICE_EXPENSE.md  docker-compose.yml  main.py  migrations.sql  pyproject.toml  sqlStruct.md  struct.sql
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20260614_0001_initial_schema.py  20260624_0002_fix_ledger_member_temp_schema.py  20260628_0003_add_expense_split_member_id.py  20260705_0004_add_ledger_invitations.py  20260705_0005_add_username.py  20260706_0006_add_auth_identities.py  20260706_0007_add_query_indexes.py  20260706_0008_add_generated_username_flag.py  20260707_0009_simplify_ledger_members.py  20260710_0010_registered_member_names_from_users.py  20260710_0011_expense_category_icons.py  20260711_0012_add_push_devices.py  20260712_0013_ledger_invite_links.py  20260712_0014_expense_kind.py  20260712_0015_expense_group_id.py  20260712_0016_drop_expense_kind_group.py  20260712_0017_expense_refund_amount.py  20260713_0018_cascade_expense_split_members.py  20260714_0019_audit_events.py  20260714_0020_platform_account_kind.py  20260716_0021_ledger_require_confirmation.py  20260717_0022_ledger_cover_url.py  20260718_0023_user_badge.py  (+2 more)
app/: config.py  database.py
config/: config.defaults.yaml  config.yaml
docs/: account-deactivation.md  architecture.md  nginx-websocket.md
hack/: start.sh
scripts/: create_platform_user.py
tests/: test_backend_rules.py  test_push_notifications.py  test_redis_features.py  test_test_users_api.py
(+48 files in other folders)
